--- a/public/index.html
+++ b/public/index.html
@@ -3,54 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teken visa</title>
+    <title>You are here</title>
   </head>
-  <body>
-    <main></main>
-    <script src="//unpkg.com/@feathersjs/client@^4.3.0/dist/feathers.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-    <script type="text/javascript">
-      // Set up socket.io
-      const socket = io("http://localhost:3030");
-      // Initialize a Feathers app
-      const client = feathers();
-      // configure authenticate and socketio
-      client.configure(feathers.socketio(socket));
-      client.configure(
-        feathers.authentication({
-          storage: window.localStorage,
-        })
-      );
-
-      const login = async () => {
-        try {
-          return await client.reAuthenticate();
-        } catch (error) {
-          return await client.authenticate({
-            strategy: "local",
-            email: "vinmugambi@gmail.com",
-            password: "GeneratedPassword",
-          });
-        }
-      };
-
-      // Form submission handler that sends a new message
-      const main = async () => {
-        await login().catch((err) => console.log(err));
-        // Find all existing messages
-        const visas = await client
-          .service("visa")
-          .find()
-          .catch((err) => console.log(err));
-        if (visas) console.log(visas);
-
-
-        client.service("visa").on("created", function (data) {
-          console.log("created", data);
-        });
-      };
-
-      main();
-    </script>
+  <body style="height: 100vh; display: flex; justify-content: center; align-items: center;">
+    <main style="font-family: fantasy;"><h2>Nice to meet you</h2></main>
   </body>
 </html>
